--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,8 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.17.0"
+    "node-binance-api": "^0.13.1",
+    "sequelize": "^6.17.0",
+    "ws": "^8.5.0"
   }
 }
