--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "mysql2": "^2.3.3",
     "node-binance-api": "^0.12.5",
     "sequelize": "^6.17.0",
+    "technicalindicators": "^3.1.0",
     "ws": "^8.5.0"
   }
 }
